@@ -100,10 +100,8 @@ class WC_Stripe_Helper {
 			return false;
 		}
 
-		$order_id = $order->get_id();
-
-		delete_post_meta( $order_id, self::META_NAME_FEE );
-		delete_post_meta( $order_id, self::LEGACY_META_NAME_FEE );
+		$order->delete_meta_data( self::META_NAME_FEE );
+		$order->delete_meta_data( self::LEGACY_META_NAME_FEE );
 	}
 
 	/**
@@ -159,10 +157,8 @@ class WC_Stripe_Helper {
 			return false;
 		}
 
-		$order_id = $order->get_id();
-
-		delete_post_meta( $order_id, self::META_NAME_NET );
-		delete_post_meta( $order_id, self::LEGACY_META_NAME_NET );
+		$order->delete_meta_data( self::META_NAME_NET );
+		$order->delete_meta_data( self::LEGACY_META_NAME_NET );
 	}
 
 	/**
